Dobree :  retour tickets

--- a/docs/_includes/card/card--text-image.html
+++ b/docs/_includes/card/card--text-image.html
@@ -6,7 +6,7 @@
     <div class="ds44-card__section--horizontal">
       {% if include.title %}<p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title h2-like dobree-title ">{{ include.title }}</p>{% endif %}
       {% if include.text %}<p>{{ include.text }}</p>{% endif %}
-      {% if include.bouton %}<p><a class="ds44-btnStd ds44-btn--contextual ds44-mt2"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>{% endif %}
+      {% if include.bouton %}<p><a class="ds44-btnStd ds44-btn--contextual ds44-mt2" href="#"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>{% endif %}
     </div>
   </div>
 </section>
