--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -78,10 +78,12 @@
 
 
     <section class="ds44-container-large ds44--xl-padding-tb ds44-flex-container ds44-flex-align-center ds44-flex-container--colLarge dobree-label">
-        <a href="/" class="ds44-logoContainer ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
-            <picture class="ds44-logo"><img src="../../assets/images/logo-loire-atlantique.svg" alt="Site du Département de Loire-Antalique : loire-atlantique.fr"></picture>
-            <p>Un musée du Département  <br>de Loire-Atlantique</p>
-        </a>
+        <p>
+            <a href="#" class="ds44-logoContainer ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
+                <picture class="ds44-logo"><img src="../../assets/images/logo-loire-atlantique.svg" alt="Site du Département de Loire-Atlantique : loire-atlantique.fr"></picture>
+                <span>Un musée du Département  <br>de Loire-Atlantique</span>
+            </a>
+        </p>
         <div class="ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
             <p>Le musée est labellisé :</p>
             <ul class="ds44-list ds44-flex-container ds44-small-flex-col">
