--- a/docs/_includes/menu/inc-menu-dobree.html
+++ b/docs/_includes/menu/inc-menu-dobree.html
@@ -142,6 +142,7 @@
                                 </ul>
                             </div>
                         </div>
+                    </div>
                 </section>
             </nav>
         </div>
