--- a/docs/_layouts/pattern.html
+++ b/docs/_layouts/pattern.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Pattern</title>
+  <title>{{ page.title }}</title>
   <meta name="description" content="Pattern">
 
   <meta property="og:site_name" content="Loire-atlantique.fr">
@@ -33,7 +33,7 @@
 
 
 </head>
-<body class="body" data-sitename="Design system Loire Atlantique">
+<body class="body {{ page.style }}" data-sitename="Design system Loire Atlantique">
   <!-- <div class="container-fluid" style="padding: 1rem;"> -->
       {{ content }}
   <!-- </div> -->
