Fix : correctif build css Dobrée

--- a/framework/scss/SP-museeDobree.scss
+++ b/framework/scss/SP-museeDobree.scss
@@ -14,7 +14,7 @@
 
 // CD44 config
 @import "_config/variables";
-@import "_config/_contextual-variables-museeDobree.scss";  // Pôle Archéologie de Loire-Atlantique - site Patrimoine corail  /!\
+@import "_config/_contextual-variables-museeDobree.scss";  // Musée Dobrée - site Patrimoine rose pale  /!\
 @import "_config/mixins";
 
 /* -------------------------------*/
