--- a/framework/scss/_config/_contextual-variables-museeDobree.scss
+++ b/framework/scss/_config/_contextual-variables-museeDobree.scss
@@ -1,5 +1,5 @@
 /*
-* CD44 Design System - contextual variables for Chateau de Clisson
+* CD44 Design System - contextual variables for Musée Dobrée
 */
 
 // ----------------
