Dobrée : Fix retours ticket

--- a/docs/_includes/card/card--tarifs.html
+++ b/docs/_includes/card/card--tarifs.html
@@ -1,5 +1,5 @@
 <section class="ds44-card ds44-card--noLink ds44-card--horizontal ds44-card--focus dobree-card--tarif ds44-noMrg">
-  <div class="ds44-flex-container ds44-flex-valign-center {{ include.direction }}">
+  <div class="ds44-flex-container  {{ include.direction }} ds44-flex-valign-stretch">
     <div class="ds44-card__section--horizontal--img{{ include.imgdim }}">
        <picture class="">
          <img src="../../assets/images/ds44-card--sampleImg.png" alt="" class="dobree-imgFocus" />
