--- a/docs/_includes/titres/main-title-text.html
+++ b/docs/_includes/titres/main-title-text.html
@@ -1,7 +1,7 @@
 <section class="ds44--xxl-padding-tb">
 	<div class="ds44-container-large ds44--xxl-padding-tb">
 		<div class="ds44-grid12-offset-1">
-            <div class="ds44-flex-container ds44-flex-valign-center ds44-medium-flex-col ds44-fgap1 ds44-mb3">
+            <div class="ds44-flex-container ds44-medium-flex-col ds44-fgap1 ds44-mb3">
                 <div class="ds44-fl3">
                     <h2 id="idTitre2" class="h1-like dobree-title">{{ include.title }}</h2>
                 </div>
