--- a/framework/scss/_libraries/_ds44-grid.scss
+++ b/framework/scss/_libraries/_ds44-grid.scss
@@ -40,3 +40,10 @@
   max-width: 100%;
   padding: 2rem;
 }
+
+@media (max-width: ($ds44-large - .0625)) {
+    .ds44-noGapCol {
+        grid-column-gap: 0 !important;
+        grid-row-gap: 4rem !important;
+    }
+ }
