--- a/docs/_includes/boxes/box-title.html
+++ b/docs/_includes/boxes/box-title.html
@@ -1,6 +1,6 @@
 <section class="ds44-theme ds44--xxl-padding-tb">
 	<div class="ds44-inner-container">
-		<div class="ds44-grid12-offset-1  ds44-center">
+		<div class="ds44-grid12-offset-1 ds44-center ds44--xl-padding-tb">
             <h2 id="idTitre2" class="h1-like h1-like--light dobree-title">{{ include.title }}</h2>
             <p>
 				<a href="#" class="ds44-btnStd" title="En savoir plus : {{ include.title }}"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
