--- a/docs/_includes/composants-transverses/table-mobile.html
+++ b/docs/_includes/composants-transverses/table-mobile.html
@@ -1,8 +1,9 @@
-<table class="ds44-mtb1 tableau_dobree ds44-w100">
+<table class="ds44-mtb1 tableau_dobree tableau_dobree--mobile ds44-w100">
     <caption class="ds44--m-padding-lr">Tarifs par groupe – à compter du 01/09/2024</caption>
     <tbody>
-        <tr class="ds44-block">
+        <tr>
             <td><b>Collèges 44</b></td>
+            <td></td>
         </tr>
         <tr>
             <td>En autonomie</td>
@@ -12,12 +13,13 @@
             <td>Guidées</td>
             <td>Gratuit</td>
         </tr>
-        <tr>
+        <tr class="last">
             <td>Ateliers</td>
             <td>XX€</td>
         </tr>
-        <tr class="ds44-block ds44-mt-std">
+        <tr>
             <td><b>Établissements REP + ULYS</b></td>
+            <td></td>
         </tr>
         <tr>
             <td>En autonomie</td>
@@ -27,12 +29,13 @@
             <td>Guidées</td>
             <td>Gratuit</td>
         </tr>
-        <tr>
+        <tr class="last">
             <td>Ateliers</td>
             <td>XX€</td>
         </tr>
-        <tr class="ds44-block ds44-mt-std">
+        <tr>
             <td><b>Autres</b></td>
+            <td></td>
         </tr>
         <tr>
             <td>En autonomie</td>
