--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
             </div>
-            <ul class="ds44-list ds44-flex-container">
+            <ul class="ds44-list ds44-flex-container ds44-flex-container--colMed">
                 <li class="ds44-footerLink"><a href="#">Mentions légales</a></li>
                 <li class="ds44-footerLink"><a href="#">Accessibilité</a></li>
                 <li class="ds44-footerLink"><a href="#">Plan du site</a></li>
@@ -84,7 +84,7 @@
                 <span>Un musée du Département  <br>de Loire-Atlantique</span>
             </a>
         </p>
-        <div class="ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
+        <div class="ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr ds44-flex-container--colMed">
             <p>Le musée est labellisé :</p>
             <ul class="ds44-list ds44-flex-container ds44-small-flex-col">
                 <li><a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo-qualite-toursime.svg" alt="Label Qualité Tourisme"></picture></a></li>
