--- a/docs/_includes/images/inc-video-dobree.html
+++ b/docs/_includes/images/inc-video-dobree.html
@@ -2,10 +2,6 @@
     <p role="heading" aria-level="1" class="h1-like ds44-text--colorInvert ds44-noMrg">
         <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree-white.svg" alt="Musée Dobrée"></picture>
     </p>
-    <!-- <p role="heading" aria-level="1" class="h1-like ds44-text--colorInvert ds44-show-tinyToLarge ds44-hide-large ds44-noMrg">
-        <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree-white.svg" alt="{% if include.logoAlt %}{{ include.logoAlt }}{% else %}Retour à l&apos;accueil du site du Musée Dobrée{% endif %}"></picture>
-        <span>Un musée du Département de Loire-Atlantique</span>
-    </p> -->
     <div class="bandeau-info ds44--2xl-padding ">
         <div class="ds44-flex-container ds44-fsb ds44-flex-valign-center ">
             <p>
@@ -26,7 +22,7 @@
 
         <div class="inbl dobree-listAccessibility ds44-hide-large ds44-flex-container">
             <div class="ds44-flex-container ds44--m-padding ds44-mt1">
-                <a href="#"><span class="">Accessibilité du musée :</span></a>
+                <a href="#"><span class="">Accessibilité musée</span></a>
                 <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
                     <li><i class="icon icon-handicap-auditif icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap auditif</span></li>
                     <li><i class="icon icon-handicap-mental icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap mental</span></li>
@@ -35,6 +31,12 @@
                 </ul>
             </div>
         </div>
+        <p class="ds44-hide-large inbl ds44-mt2">
+            <a href="#" class="logoLA ds44-flex-container ds44-flex-valign-center ds44-text--colorInvert">
+                <picture class="ds44-logo"><img src="../../assets/images/logos/logo-LA-white.svg" alt=""></picture>
+                <span>Un musée du Département<br> de Loire-Atlantique</span>
+            </a>
+        </p>
     </div>
     <div class="dobree-video">
         <video id="video-presentation" loop autoplay="true" class="ds44-js-video" role="presentation" tabindex="-1">
