--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -137,18 +137,12 @@
 
 main {
     padding-top: $header-height-large;
-    &.main-dobree {
-        padding-top: 8.8rem;
-    }
 }
 
 @media (max-width: $ds44-large - .0625) {
 
     main {
         padding-top: $header-height-medium;
-        &.main-dobree {
-            padding-top: 5.8rem;
-        }
     }
 
 }
@@ -157,9 +151,6 @@ main {
 
     main {
         padding-top: $header-height-small;
-        &.main-dobree {
-            padding-top: 5.8rem;
-        }
     }
 
 }
@@ -168,6 +159,101 @@ main {
 
     .ds44-inner-container {
         max-width: $ds44-max-inner-size;
+    }
+
+}
+
+/* Body Modern spécifique pour le musée Dobrée par exemple */
+body.modern {
+    main {
+        padding-top: 8.8rem;
+        @media (max-width: $ds44-large - .0625) {
+            padding-top: 5.8rem;
+        }
+        @media (max-width: $ds44-small - .0625) {
+            padding-top: 5.8rem;
+        }
+    }
+    .ds44-introduction {
+        font-weight: normal;
+    }
+    .ds44-contenuDossier .ds44-contenuArticle h2:first-of-type {
+        margin-top: 0;
+    }
+
+    /* Title Monotype */
+    .h1-like,
+    .h1-like.h1-like--light,
+    h1 {
+        font-family: $ds44-font-family-headingsDobree;
+        font-weight: normal;
+        line-height: 1.2em;
+        margin-bottom: 3rem;
+
+        @media (max-width: $ds44-medium - .625) {
+            margin-bottom: 2rem;
+        }
+        @media (max-width: $ds44-small - .625) {
+            margin-bottom: 1rem;
+        }
+    }
+    .h1-like{
+        font-size: 3.5em;
+
+        @media (max-width: $ds44-medium - .625) {
+            font-size: 2.5em;
+        }
+        @media (max-width: $ds44-small - .625) {
+            font-size: 1.5em;
+        }
+    }
+    .h1-like.h1-like--light{
+        font-size: 2.5em;
+
+        @media (max-width: $ds44-medium - .625) {
+            font-size: 2em;
+        }
+        @media (max-width: $ds44-small - .625) {
+            font-size: 1.25em;
+        }
+    }
+    .h2-like,
+    .h3-like,
+    .h5-like,
+    .h5-like {
+        font-family: $ds44-font-family-baseDobree;
+        padding: 0;
+        background: none;
+        display: block;
+        font-weight: inherit;
+    }
+    .h2-like{
+        font-size: 1.875em;
+
+        @media (max-width: $ds44-medium - .625) {
+            font-size: 1.5em;
+        }
+        @media (max-width: $ds44-small - .625) {
+            font-size: 1.25em;
+        }
+    }
+    .h3-like{
+        font-size: 1.25em;
+        font-weight: bold;
+
+        @media (max-width: $ds44-medium - .625) {
+            font-size: 1.25em;
+        }
+        @media (max-width: $ds44-small - .625) {
+            font-size: 1.125em;
+        }
+    }
+    .h4-like{
+        font-size: 1.125em;
+    }
+    .h5-like{
+        font-size: 1em;
+        font-weight: bold;
     }
 
 }
