--- a/docs/_includes/partage/partage-interne-dobree.html
+++ b/docs/_includes/partage/partage-interne-dobree.html
@@ -1,5 +1,5 @@
 <section class="ds44-partage ds44-flex-container ds44-flex-align-center pal">
-    <h2 class="h3-like dobree-title" id="idPartageRS">Partagez cette page :</h2>
+    <h2 class="h3-like" id="idPartageRS">Partagez cette page :</h2>
     <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
         <li><a href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank" class="ds44-rsLink" title="Partager cette page sur Facebook - nouvelle fenêtre" data-statistic='{"name": "declenche-evenement","category": "Partage page","action": "Facebook"}'><i class="icon icon-facebook icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Partager cette page sur Facebook</span></a></li>
         <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Floire-atlantique.fr%2F&text=Informations+pratiques+et+services+en+ligne&hashtags=loireAtlantique" target="_blank" class="ds44-rsLink" title="Partager cette page sur X - nouvelle fenêtre" data-statistic='{"name": "declenche-evenement","category": "Partage page","action": "Twitter"}'><i class="icon icon-x icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Partager cette page sur X</span></a></li>
