--- a/docs/_includes/titres/main-title-text.html
+++ b/docs/_includes/titres/main-title-text.html
@@ -3,7 +3,7 @@
 		<div class="ds44-grid12-offset-1">
             <div class="ds44-flex-container ds44-medium-flex-col ds44-fgap1 ds44-mb3">
                 <div class="ds44-fl3">
-                    <h2 id="idTitre2" class="h1-like dobree-title">{{ include.title }}</h2>
+                    <h2 id="idTitre2" class="h1-like">{{ include.title }}</h2>
                 </div>
                 <div class="ds44-fl2">
                     {{ include.textContent }}
