--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -32,11 +32,12 @@
 
 }
 
-.ds44-contenuArticle.ds44-contenuArticle--dobree {
+/* Style custom Modern */
+body.modern .ds44-contenuArticle {
     margin: 0 auto 5rem auto;
 
     h2, h3, h4 {
-        font-family: $ds44-font-family-baseDobree;
+        font-family: $ds44-font-family-baseModern;
         font-weight: normal;
         padding: 0;
         background: transparent;
