Dobree : suite et fin

--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -258,6 +258,12 @@ body.modern {
         font-weight: bold;
     }
 
+    .ds44-img50--event .ds44-theme .ds44-docListElem {
+      margin: .25em .5em;
+      padding-left: 2.5rem;
+      line-height: 1.4;
+    }
+
 }
 
 .ds44-navContainer {
