--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -1,7 +1,7 @@
 <footer role="contentinfo" class="footer-dobree">
     <div class="ds44-container-fluid ds44-bgGray ds44--xxl-padding-t ds44--m-padding-b">
         <section class="ds44-container-large">
-            <div class="grid-12-small-1 has-gutter-l ds44-mb4">
+            <div class="grid-12-small-1 has-gutter-l ds44-mb3">
                 <div class="col-6-small-1 ds44-mb2">
                     <p class="ds44-mb2">
                         Musée Dobrée <br>
@@ -15,12 +15,12 @@
                         </a>
                     </p>
                 </div>
-                <div class="col-6-small-1 ds44-mb2">
+                <div class="col-6-small-1">
                     <div class="">
                         <p class="inbl ds44-mr-std ds44-mb-std">
             				<a href="#" class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Nous contacter</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
             			</p>
-                        <p class="inbl ds44-mb-std">
+                        <p class="inbl ds44-mb-std ds44--tablet--m-padding-b">
             				<a href="#" class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">S'inscrire à la lettre d'infos</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a>
             			</p>
                     </div>
