--- a/docs/_includes/images/inc-mosaiques_img-base.html
+++ b/docs/_includes/images/inc-mosaiques_img-base.html
@@ -1,4 +1,4 @@
-<figure class="ds44-legendeContainer ds44-container-imgRatio ds44-container-imgZoom {% if include.portrait == 'true' %}ds44-container-imgRatio--A4{% endif %}" data-target="#overlay-mosaique" data-js="ds44-modal" role="figure" aria-label="{{ include.legend }}">
+<figure class="ds44-legendeContainer ds44-container-imgRatio ds44-container-imgZoom {% if include.portrait == 'true' %}ds44-container-imgRatio--A4{% endif %}" data-target="#overlay-mosaique" data-js="ds44-modal" role="figure" aria-label="{{ include.legend }} - Ouvrir la fenêtre : [titre de la modale]">
     <button type="button">
       <img {{ include.srcImg }} alt="{{ include.legend }} - Ouvir la fenêtre : [titre de la modale]" class="ds44-imgRatio">
     </button>
