--- a/docs/_includes/composants-transverses/inc-horaires-ouverture.html
+++ b/docs/_includes/composants-transverses/inc-horaires-ouverture.html
@@ -1,5 +1,5 @@
 <p {{ include.surchargeDS }}>
-    <a href="#" class="horairesOuverture dobree-link">
-        Ouvert jusqu'à 17h
+    <a href="#" class="horairesOuverture {{ include.statut }} dobree-link">
+        {{ include.text }}
     </a>
 </p>
