--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -8,7 +8,7 @@
                         18 rue Voltaire,<br>
                         44000 Nantes
                     </p>
-                    <p class="horairesOuverture ds44-mb1 inbl">Le musée est ouvert aujourd’hui de 8h à 17h</p>
+                    <p class="horairesOuverture open ds44-mb1 inbl">Le musée est ouvert aujourd’hui de 8h à 17h</p>
                     <p>
                         <a href="#" class="dobree-link">
                             + d'infos sur les horaires
