--- a/docs/_includes/images/inc-video-dobree.html
+++ b/docs/_includes/images/inc-video-dobree.html
@@ -16,7 +16,7 @@
                     <i class="icon icon-pause" data-icon-play="icon-play" data-icon-pause="icon-pause" aria-hidden="true"></i>
                     <span class="value visually-hidden" data-value-play="Démarrer l'animation" data-value-pause="Arrêter l'animation">Arrêter l'animation</span>
                 </button>
-                {% include composants-transverses/inc-horaires-ouverture.html %}
+                {% include composants-transverses/inc-horaires-ouverture.html text="Ouvert jusqu'à 17h" statut="open" %}
             </div>
         </div>
 
