Dobree : retours accessibilité

--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -194,6 +194,7 @@
                 }
             }
         }
+        p {margin-bottom:0;}
 }
 /* Musée Dobrée Header Homepage vidéo */
 .dobree-header.containerVideo {
