--- a/docs/_includes/images/inc-video-dobree.html
+++ b/docs/_includes/images/inc-video-dobree.html
@@ -31,10 +31,10 @@
                 </ul>
             </div>
         </div>
-        <p class="ds44-hide-large inbl ds44-mt2">
+        <p class="ds44-hide-large inbl ds44-mt3">
             <a href="#" class="logoLA ds44-flex-container ds44-flex-valign-center ds44-text--colorInvert">
                 <picture class="ds44-logo"><img src="../../assets/images/logos/logo-LA-white.svg" alt=""></picture>
-                <span>Un musée du Département<br> de Loire-Atlantique</span>
+                <span>Un musée du Département</span>
             </a>
         </p>
     </div>
