--- a/docs/_includes/menu/inc-menu-dobree-mobile.html
+++ b/docs/_includes/menu/inc-menu-dobree-mobile.html
@@ -104,7 +104,7 @@
                 <div class="ds44-mb2">
                     <div class="ds44-inner-container dobree-listAccessibility ds44-center">
                         <div class="ds44-flex-container ds44-flex-align-center ds44--m-padding">
-                            <a href="#"><span class="">Accessibilité du musée :</span></a>
+                            <p><a href="#"><span class="">Accessibilité du musée :</span></a></p> 
                             <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
                                 <li><i class="icon icon-handicap-auditif icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap auditif</span></li>
                                 <li><i class="icon icon-handicap-mental icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap mental</span></li>
