--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -1,10 +1,10 @@
 <footer role="contentinfo" class="footer-dobree">
     <div class="ds44-container-fluid ds44-bgGray ds44--xxl-padding-t ds44--m-padding-b">
         <section class="ds44-container-large">
-            <div class="grid-12-small-1 has-gutter-l ds44-mb3">
+            <div class="grid-12-small-1 has-gutter-l ds44-mb2">
                 <div class="col-6-small-1 ds44-mb2">
                     <p class="ds44-mb2">
-                        Musée Dobrée <br>
+                        <strong>Musée Dobrée </strong><br>
                         18 rue Voltaire,<br>
                         44000 Nantes
                     </p>
