--- a/docs/_includes/onglets/onglets-lateral.html
+++ b/docs/_includes/onglets/onglets-lateral.html
@@ -1,4 +1,4 @@
-ds44-tabs__item<section class="ds44-ongletsContainer dobree-ongletsContainer">
+<section class="ds44-ongletsContainer dobree-ongletsContainer">
     <div class="js-tabs ds44-tabs grid-12-medium-1" data-existing-hx="h2" data-tabs-prefix-class="ds44" id="onglets">
         <nav role="navigation" aria-label="xxx" id="yyy" class="ds44-flex-container ds44-navOnglets ds44-hiddenPrint col-3">
             <ul class="ds44-tabs__list ds44-flex-container--column ds44-list js-tabs" id="tabs">
