Menu dobree responsive

--- a/framework/scss/_libraries/_responsive.scss
+++ b/framework/scss/_libraries/_responsive.scss
@@ -423,6 +423,10 @@
     display: block!important;
   }
 
+  .ds44-show-mobile-flex {
+    display: flex!important;
+  }
+
   .ds44-hide-smallScreens {
     display: none !important;
   }
