--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -629,6 +629,8 @@ a.ds44-btnStd--retourPage {
     span {
         font-size: .97em !important;
     }
+    background-color: transparent !important;
+    color: $ds44-dark !important;
 }
 
 
