--- a/framework/scss/components/_menu.scss
+++ b/framework/scss/components/_menu.scss
@@ -328,10 +328,14 @@
               height: 62px;
               margin: 0;
           }
-    #subMenu-choixLangue {
+    #subMenu-choixLangue, #subMenu-choixLangueMobile {
         top : 6rem;
         right: 6rem !important;
         width: 20rem;
+        z-index: 1;
+    }
+    #subMenu-choixLangueMobile {
+      background-color: white;
     }
     .ds44-collapser {
         margin: 0;
@@ -363,6 +367,50 @@
   }
 }
 
+
+.mobile {
+  .ds44-collapser_content {
+    background-color: transparent;
+  }
+
+  ul .ds44-collapser_content--link {
+    padding: 0rem 1rem 0rem 3rem;
+    font-size: 14px;
+  }
+
+  .dobree-listAccessibility > div {
+    background-color: rgba(255, 255, 255, 0.4);
+    color: #000;
+  }
+
+  .ds44-collapser_button {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+  }
+  .ds44-logoContainer img {
+    height: 62px;
+    margin: 0;
+  }
+}
+
+
+#subMenu-choixLangue, #subMenu-choixLangueMobile {
+  top : 6rem;
+  right: 6rem !important;
+  width: 20rem;
+  z-index: 1;
+}
+
+#subMenu-choixLangueMobile {
+  background-color: white;
+}
+
+
+.ds44-navList.align-first-col-title div:first-child {
+  margin-top: -5px;
+}
+
 }
 .dobree-menu.ds44-blocMenu .dobree-blocVousEtes {
     background-color: $ds44-lightgray ;
@@ -383,8 +431,12 @@
           }
 
       }
+    }
 }
-}
+
+
+
+
 
 
 // -------------
