--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -18,7 +18,7 @@
                 <div class="ds44-colRight">
                     <div class="inbl dobree-listAccessibility ds44-hide-tinyToLarge">
                         <div class="ds44-flex-container ds44-flex-align-center ds44--m-padding">
-                            <p><a href="#"><span class="">Accessibilité du musée :</span></a></p>
+                            <p><a href="#" title="Accessibilité du musée : Handicap auditif, Handicap mental, Handicap moteur, Handicap visuel">Accessibilité du musée :</a></p>
                             <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
                                 <li><i class="icon icon-handicap-auditif icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap auditif</span></li>
                                 <li><i class="icon icon-handicap-mental icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap mental</span></li>
