SD-102 :  bug tuile mise en avant

--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -120,6 +120,10 @@
     position: absolute;
     z-index: 1;
     width: 27.5vw;
+
+    &.fullW{
+        width: 100%;
+    }
 }
 
 .ds44-legendeContainer .ds44-blockAbsolute--br {
