--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -9,7 +9,7 @@
   margin: 2rem 0 3rem 0;
   border-top: 1px solid $ds44-contextual-color;
 
-  li.ds44-collapser_element, li {
+  li.ds44-collapser_element {
     list-style: none!important;
   }
 
@@ -27,7 +27,7 @@
     }
 
     .ds44-collapser_content li {
-      list-style: none;
+      //list-style: none;
       margin-top: 0;
 
       > ul > li:first-child {
