--- a/framework/scss/_config/_contextual-variables-ports.scss
+++ b/framework/scss/_config/_contextual-variables-ports.scss
@@ -7,4 +7,4 @@
 // ----------------
 
 $ds44-contextual-color : #00b3bc !default;
-$ds44-contextual-hover : lighten($ds44-contextual-color, 10%) !default;
+$ds44-contextual-hover : darken($ds44-contextual-color, 10%) !default;
