Ajout css utilitaire

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -443,6 +443,10 @@
     justify-content: left;
 }
 
+.ds44-flex-align-right {
+    justify-content: right;
+}
+
 .ds44-fse {
     justify-content: space-evenly;
 }
