--- a/docs/_includes/carrousel/carrousel-x3-Dobree.html
+++ b/docs/_includes/carrousel/carrousel-x3-Dobree.html
@@ -44,6 +44,7 @@
                 </li>
             </ul>
         </div>
+        <ul class="swiper-pagination bullet"></ul>
         <button class="swiper-button-prev swiper-button-disabled" type="button">
             <i class="icon icon-left" aria-hidden="true"></i>
             <span class="visually-hidden"></span>
