--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -90,6 +90,30 @@
         text-align: center;
         padding: 1rem 0;
         min-height: 4rem;
+        &.bullet{
+          margin: 0 -1rem;
+          display:flex;
+          align-items: center;
+          align-content: center;
+          justify-content: center;
+          background-color: transparent;
+          li {
+            list-style: none;
+            margin: 0 1rem;
+          }
+          .swiper-pagination-bullet {
+            border-radius: 0;
+            display:block;
+            width: 1.5rem;
+            height: 1.5rem;
+            background-color: #000000;
+            opacity:1;
+            border:0.1rem solid #000000;
+            &.swiper-pagination-bullet-active {
+              background-color: #fff;
+            }
+          }
+        }
 
         p {
           margin: 0;
