--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -83,6 +83,12 @@ body.modern .ds44-contenuArticle {
             margin-top: 0;
         }
     }
+    .ds44-box-heading {
+        font-family: $ds44-font-family-baseModern;
+        display: block;
+        font-size: 1.25em;
+        font-weight: bold;
+    }
 }
 
 .ds44-bgDark {
