--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <button class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue"  aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue" title="Choisir une langue - langue sélectionnée : Français - FR">
-                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="langue sélectionnée : Français - FR"><span class="ds44-btnInnerText">FR</span><i class="icon icon-toggle icon--medium icon-up" aria-hidden="true"></i>
+                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="langue sélectionnée : Français - FR"><span class="ds44-btnInnerText">FR</span><i class="icon icon-toggle icon--medium icon-down" aria-hidden="true"></i>
                     </button>
                     <div id="subMenu-choixLangue" class="ds44-subMenu" data-sub-menu="">
                         <p role="heading" aria-level="1" class="visually-hidden">Choix de la langue</p>
