--- a/docs/_includes/onglets/onglets-lateral.html
+++ b/docs/_includes/onglets/onglets-lateral.html
@@ -3,16 +3,16 @@
         <nav role="navigation" aria-label="xxx" id="yyy" class="ds44-flex-container ds44-navOnglets ds44-hiddenPrint col-3">
             <ul class="ds44-tabs__list ds44-flex-container--column ds44-list js-tabs" id="tabs">
                 <li class="ds44-tabs__item" id="tabs__1">
-                    <a id="label_id_first" href="#id_first" class="js-tablist__link ds44-tabs__link" aria-current="true">{{ include.titleOngletUn }}</a>
+                    <a id="label_id_first" href="#id_first" class="js-tablist__link ds44-tabs__link ds44-tabs__link-mobile" aria-current="true">{{ include.titleOngletUn }}</a>
                 </li>
                 <li class="ds44-tabs__item" id="tabs__2">
-                    <a id="label_id_second" href="#id_second" class="js-tablist__link ds44-tabs__link" aria-disabled="true">{{ include.titleOngletDeux }}</a>
+                    <a id="label_id_second" href="#id_second" class="js-tablist__link ds44-tabs__link ds44-tabs__link-mobile" aria-disabled="true">{{ include.titleOngletDeux }}</a>
                 </li>
                 <li class="ds44-tabs__item" id="tabs__3">
-                    <a id="label_id_third" href="#id_third" class="js-tablist__link ds44-tabs__link" aria-disabled="true">{{ include.titleOngletTrois }}</a>
+                    <a id="label_id_third" href="#id_third" class="js-tablist__link ds44-tabs__link ds44-tabs__link-mobile" aria-disabled="true">{{ include.titleOngletTrois }}</a>
                 </li>
                 <li class="ds44-tabs__item" id="tabs__4">
-                    <a id="label_id_fourth" href="#id_fourth" class="js-tablist__link ds44-tabs__link" aria-disabled="true">{{ include.titleOngletQuatre }}</a>
+                    <a id="label_id_fourth" href="#id_fourth" class="js-tablist__link ds44-tabs__link ds44-tabs__link-mobile" aria-disabled="true">{{ include.titleOngletQuatre }}</a>
                 </li>
             </ul>
         </nav>
