Correction point de transition onglet

--- a/framework/scss/components/_onglets.scss
+++ b/framework/scss/components/_onglets.scss
@@ -43,7 +43,8 @@
     }
 }
 
-@media (max-width: $ds44-small - .0625) {
+
+@media (max-width: 991px) {
     .ds44-tabs__link-mobile {
         background-color: #F1F1F1 !important;
         margin-bottom: 28px;
