--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -79,7 +79,7 @@
 
     <section class="ds44-container-large ds44--xl-padding-tb ds44-flex-container ds44-flex-align-center ds44-flex-container--colLarge dobree-label">
         <p>
-            <a href="#" class="ds44-logoContainer ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
+            <a href="#" class="ds44-logoContainer ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr" title="Loire atlantique - https://www.musee-dobree.fr/ - visiter le site web - nouvelle fenêtre - un musée du Département Loire Atlantique">
                 <picture class="ds44-logo"><img src="../../assets/images/logo-loire-atlantique.svg" alt="Site du Département de Loire-Atlantique : loire-atlantique.fr"></picture>
                 <span>Un musée du Département  <br>de Loire-Atlantique</span>
             </a>
