--- a/docs/_includes/card/card--tarifs.html
+++ b/docs/_includes/card/card--tarifs.html
@@ -6,7 +6,7 @@
       </picture>
    </div>
     <div class="ds44-card__section--horizontal">
-      <p role="heading" aria-level="{{ include.aria-level }}">{{ include.title }}</p>
+      <p aria-level="{{ include.aria-level }}">{{ include.title }}</p>
       <ul class="ds44-list ds44-mb2">
           <li><span class="txtTarif">Tarif plein</span><span class="tarif">X €</span></li>
           <li><span class="txtTarif">Tarif réduit</span><span class="tarif">X €</span></li>
