--- a/docs/_includes/carrousel/carrousel-x3-Dobree.html
+++ b/docs/_includes/carrousel/carrousel-x3-Dobree.html
@@ -44,7 +44,7 @@
                 </li>
             </ul>
         </div>
-        <ul class="swiper-pagination bullet"></ul>
+        <ul class="ds44-hide-tiny-to-medium ds44-hide-mobile swiper-pagination bullet"></ul>
         <button class="swiper-button-prev swiper-button-disabled" type="button">
             <i class="icon icon-left" aria-hidden="true"></i>
             <span class="visually-hidden"></span>
@@ -55,7 +55,7 @@
         </button>
         <div class="swiper-thumbs">
             <div class="swiper-thumbs-container">
-                <nav class="swiper-container" aria-label="Navigation au sein des vignettes - {{ include.titreCarrousel }}">
+                <nav class="swiper-container" aria-label="Navigation au sein des vignettes - L’agenda du musée">
 
                     <ul class="swiper-wrapper ds44-list">
                         <li class="swiper-slide">
