--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -29,10 +29,9 @@
                     </div>
                     <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue"  aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue" title="Choisir une langue - langue sélectionnée : Français - FR">
                         <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="langue sélectionnée : Français - FR"><span class="ds44-btnInnerText">FR</span><i class="icon icon-toggle icon--medium icon-down" aria-hidden="true"></i>
-                    </button>
-
-                    <a href="#" class="ds44-btn--menu ds44-btn--contextual ds44-btnIcoText--maxi ds44--xl-padding"><span class="ds44-btnInnerText">Billetterie</span><i class="icon icon-long-arrow-right icon--large" aria-hidden="true"></i></a>
-                    <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-btn--invert" aria-label="Ouvrir le menu de navigation" aria-controls="menu" data-open-overlay="true" id="open-menu">
+                    </button><!--
+                    --><a href="#" class="ds44-btn--menu ds44-btn--contextual ds44-btnIcoText--maxi ds44--xl-padding"><span class="ds44-btnInnerText">Billetterie</span><i class="icon icon-long-arrow-right icon--large" aria-hidden="true"></i></a><!--
+                    --><button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-btn--invert" aria-label="Ouvrir le menu de navigation" aria-controls="menu" data-open-overlay="true" id="open-menu">
                         <span class="ds44-btnInnerText">Menu</span><i class="icon icon-burger icon--large" aria-hidden="true"></i>
                     </button>
                 </div>
