--- a/docs/_includes/card/card--text-image.html
+++ b/docs/_includes/card/card--text-image.html
@@ -1,7 +1,7 @@
 <section class="ds44-card--noLink ds44-card--horizontal ds44-card--focus dobree-text-image ds44-noMrg">
   <div class="ds44-flex-container ds44-flex-valign-center {{ include.direction }}">
     <div class="ds44-card__section--horizontal--img">
-        {% include images/inc-mosaiques_img-base.html srcImg='src="../../assets/images/img_dobree1.jpg"' legend="Légende associée © Copyright" pictoFullscreen='true' %}
+        {% include images/inc-mosaiques_img-base.html srcImg='src="../../assets/images/img_dobree1.jpg"' legend="Légende associée © Copyright" hiddenLegend='true' pictoFullscreen='true' %}
    </div>
     <div class="ds44-card__section--horizontal">
       {% if include.title %}<p aria-level="{{ include.arialevel }}" role="heading" class="ds44-card__title h2-like ">{{ include.title }}</p>{% endif %}
