--- a/docs/_includes/images/inc-mosaiques_img-base.html
+++ b/docs/_includes/images/inc-mosaiques_img-base.html
@@ -5,5 +5,5 @@
     {% if include.pictoFullscreen == 'true' %}
       <span class="ds44-btnIco ds44-btnIco--carre ds44-bgDark" aria-hidden="true"><i class="icon icon-fullscreen" aria-hidden="true"></i></span>
     {% endif %}
-    <figcaption class="ds44-imgCaption">{{ include.legend }}</figcaption>
+    <figcaption class="ds44-imgCaption {% if include.hiddenLegend == 'true' %}visually-hidden{% endif %}">{{ include.legend }}</figcaption>
 </figure>
