--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -104,7 +104,7 @@
 .ds44-modal-gab {
     padding: $ds44-padding-box;
     margin-top: $ds44-padding-box;
-    p.ds44-btnIco--carre {
+    .ds44-btnIco--carre {
         display: none;
     }
 }
