--- a/docs/_includes/card/card--dobree.html
+++ b/docs/_includes/card/card--dobree.html
@@ -6,7 +6,7 @@
     {% endif %}
     <div class="ds44-card__section">
       <div class="ds44-innerBoxContainer">
-          <p aria-level="3" role="heading" class="h4-like ds44-cardTitle ds44-mb-std" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
+          <p aria-level="3" role="heading" class="h4-like ds44-cardTitle ds44-card__title ds44-mb-std" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
           {{ include.cardContent }}
       </div>
       <i class="icon icon-long-arrow-right icon--sizeM ds44-cardArrow" aria-hidden="true"></i>
