fix : ticket SD-125

--- a/docs/_includes/onglets/onglets-lateral.html
+++ b/docs/_includes/onglets/onglets-lateral.html
@@ -1,7 +1,7 @@
 <section class="ds44-ongletsContainer dobree-ongletsContainer">
     <div class="js-tabs ds44-tabs grid-12-medium-1 grid-12-small-1" data-existing-hx="h2" data-tabs-prefix-class="ds44" id="onglets" data-tabs-collapse-mobile="">
         <nav role="navigation" aria-label="xxx" id="yyy" class="ds44-flex-container ds44-navOnglets ds44-hiddenPrint col-3">
-            <ul class="ds44-tabs__list ds44-flex-container--column ds44-list js-tabs" id="tabs">
+            <ul class="ds44-tabs__list ds44-flex-container--column ds44-list" id="tabs">
                 <li class="ds44-tabs__item" id="tabs__1">
                     <a id="label_id_first" href="#id_first" class="js-tablist__link ds44-tabs__link ds44-tabs__link-mobile" aria-current="true">{{ include.titleOngletUn }}</a>
                 </li>
