fix : ticket SD-68

--- a/docs/_includes/menu/inc-menu-dobree.html
+++ b/docs/_includes/menu/inc-menu-dobree.html
@@ -10,7 +10,7 @@
                         <p class="ds44-logoContainer">
                             <picture class="ds44-logo"><img src="../../assets/images/logos/logo-musee-Dobree-mobile.svg" alt="Musée Dobrée"></picture>
                         </p>
-                        <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding choixLangue" aria-label="Ouvrir le menu pour choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
+                        <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding choixLangue" aria-label="Ouvrir le menu pour choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue-menu">
                             <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" aria-label="Langue sélectionné : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
                         </button>
                         <button class="ds44-btnOverlay ds44-btnOverlay--closeOverlay" type="button" aria-label="Fermer le menu de navigation">
@@ -91,7 +91,7 @@
                             </div>
                         </li>
                     </ul>
-                    <div id="subMenu-choixLangue" class="ds44-subMenu" data-sub-menu="" aria-hidden="true">
+                    <div id="subMenu-choixLangue-menu" class="ds44-subMenu" data-sub-menu="" aria-hidden="true">
                         <p role="heading" aria-level="1" class="visually-hidden">Choix de la langue</p>
                         <ul class="ds44-list">
                             <li>
