--- a/framework/scss/components/_carrousel.scss
+++ b/framework/scss/components/_carrousel.scss
@@ -91,6 +91,9 @@
         padding: 1rem 0;
         min-height: 4rem;
         &.bullet{
+          @media screen and (max-width: $ds44-small - .0625) {
+            display: none;
+          }
           margin: 0 -1rem;
           display:flex;
           align-items: center;
