--- a/docs/_includes/composants-transverses/table-mobile.html
+++ b/docs/_includes/composants-transverses/table-mobile.html
@@ -1,4 +1,4 @@
-<table class="ds44-mtb1 tableau_dobree tableau_dobree--mobile ds44-w100" role="presentation">
+<table class="ds44-mtb1 tableau_dobree tableau_dobree--mobile ds44-w100">
     <caption class="ds44--m-padding-lr">Tarifs par groupe – à compter du 01/09/2024</caption>
     <tbody>
         <tr>
