--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -38,7 +38,7 @@
         position:absolute;
         top:0;
         left: 0;
-        border:2px dotted #000;
+        border: 5px solid $ds44-contextual-color;
         opacity:0;
     }
     &.focus,
