--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -38,7 +38,7 @@
         position:absolute;
         top:0;
         left: 0;
-        border: 5px solid $ds44-contextual-color;
+        border: 3px solid $ds44-dark ;
         opacity:0;
     }
     &.focus,
