--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -31,9 +31,11 @@
         top: 0;
         opacity: 1;
         visibility: visible;
+        z-index: 1100;
 
         * {
             visibility: visible;
+            z-index: 1100;
         }
     }
 }
