--- a/framework/scss/_config/_contextual-variables-mda.scss
+++ b/framework/scss/_config/_contextual-variables-mda.scss
@@ -6,5 +6,5 @@
 // ---- COLORS ----
 // ----------------
 
-$ds44-contextual-color : #8b99ab !default;
+$ds44-contextual-color : #988bc1 !default;
 $ds44-contextual-hover : darken($ds44-contextual-color, 10%) !default;
