--- a/docs/_includes/partage/partage-footer.html
+++ b/docs/_includes/partage/partage-footer.html
@@ -1,7 +1,7 @@
 <p role="heading" aria-level="2" class="h4-like mbs txtcenter" id="idTitreFooter2">Suivez-nous sur les réseaux sociaux :</p>
 <ul class="ds44-list ds44-flex-container ds44-flex-align-center">
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Facebook - nouvelle fenêtre"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Facebook</span></a></li>
-    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Twitter - nouvelle fenêtre"><i class="icon icon-twitter" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Twitter</span></a></li>
+    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur X - nouvelle fenêtre"><i class="icon icon-X" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur X</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Youtube</span></a></li>
     <li>
