--- a/docs/_includes/card/card--eluComplete.html
+++ b/docs/_includes/card/card--eluComplete.html
@@ -7,10 +7,10 @@
         <p>{{ include.fonction }}</p>
         <hr class="mbm mtm" aria-hidden="true"/>
         <p class="ds44-docListElem ds44-mt-std"><i class="icon icon-tag ds44-docListIco" aria-hidden="true"></i>Conseiller d&eacute;partemental</p>
-        <p class="ds44-docListElem ds44-mt-std"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>Canton : Saint-Nazaire 2</p>
+        <p class="ds44-docListElem ds44-mt-std"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>Canton de Nantes 7</p>
         <hr class="mbm mtm" aria-hidden="true"/>
-        <p class="ds44-mt-std">Parti Socialiste (PS)</p>
-        <p class="ds44-mt-std">En binôme avec : Lydia Meignen</p>
+        <p class="ds44-mt-std"> Groupe Loire-Atlantique à Gauche</p>
+        <p class="ds44-mt-std">En binôme avec : Chloé Girardot Moitié</p>
         <i class="icon icon-arrow-right ds44-cardArrow" aria-hidden="true"></i>
     </div>
 </section>
