--- a/docs/_includes/apps/inc-partage-app.html
+++ b/docs/_includes/apps/inc-partage-app.html
@@ -1,7 +1,7 @@
 
 <ul class="ds44-list ds44-flex-container ds44-flex-align-center">
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Facebook - nouvelle fenêtre"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Facebook</span></a></li>
-    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur X - nouvelle fenêtre"><i class="icon icon-X" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur X</span></a></li>
+    <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur X - nouvelle fenêtre"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur X</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a></li>
     <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Youtube - nouvelle fenêtre"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Youtube</span></a></li>
     <li>
