--- a/docs/_includes/partage/partage-header.html
+++ b/docs/_includes/partage/partage-header.html
@@ -2,7 +2,7 @@
     <p role="heading" aria-level="2" class="h4-like mbm mrl ds44-hide-tiny-to-medium">Suivez-nous sur les réseaux</p>
     <ul class="ds44-list ds44-flex-container ds44-fse">
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Facebook"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Facebook</span></a></li>
-        <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur X"><i class="icon icon-X" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur X</span></a></li>
+        <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur X"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur X</span></a></li>
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Instagram"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Instagram</span></a></li>
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Youtube"><i class="icon icon-youtube" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Youtube</span></a></li>
         <li><a href="#" class="ds44-rsHeadLink" title="Le Département Loire Atlantique sur Magweb"><i class="icon icon-magweb" aria-hidden="true"></i><span class="visually-hidden">Le Département Loire Atlantique sur Magweb</span></a></li>
