--- a/framework/scss/_libraries/_fonts.scss
+++ b/framework/scss/_libraries/_fonts.scss
@@ -50,6 +50,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'HansomFYW05';
+  src: url('../fonts/HansomFYW05-Regular.woff2') format('woff2'),
+       url('../fonts/HansomFYW05-Regular.woff') format('woff'),
+       url('../fonts/HansomFYW05-Regular.svg#HansomFYW05-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 // Fonts dedicated to Musée Dobrée
 
