Evol : changement de police pour les ports

--- a/framework/scss/_config/_contextual-variables-ports.scss
+++ b/framework/scss/_config/_contextual-variables-ports.scss
@@ -8,3 +8,5 @@
 
 $ds44-contextual-color : #00b3bc !default;
 $ds44-contextual-hover : darken($ds44-contextual-color, 10%) !default;
+$ds44-font-family-base      : Helvetica, Arial, sans-serif;  
+$ds44-font-family-headings  : "HansomFYW05", sans-serif;
